Fixed play button alignment

--- a/src/app/pages/radio/radio.page.scss
+++ b/src/app/pages/radio/radio.page.scss
@@ -13,7 +13,7 @@ ion-spinner#loader {
 //    --background: url("/assets/bg.jpg") no-repeat center/cover fixed;
 
 .rplay  {
-    margin: -20px;
+    margin: -35px;
     width: 120px;
     height: 120px;
     line-height: 80px;
